<resources>
    <string name="username_placeholder_login">Please enter your username</string>
    <string name="password_placeholder_login">Please enter your password</string>
    <string name="username_placeholder_register">Please enter unique username</string>
    <string name="nickname_placeholder_register">Please enter nickname</string>
    <string name="password_placeholder_register">Please enter password</string>
    <string name="password_placeholder_register2">Please enter the password again</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="message">message…</string>
    <string name="app_name">ChatsAndroid</string>
    <string name="contact_user_name_placeholder">Please enter contact\'s username</string>
    <string name="contact_nick_name_placeholder">Please enter contact\'s nickname</string>
    <string name="add">Add</string>
    <string name="register_page">Register Page</string>
    <string name="login_page">Login Page</string>
    <string name="not_registered">Not registered?</string>
    <string name="to_register">to register.</string>
    <string name="already_registered">Already registered?</string>
    <string name="click_here">Click here</string>
    <string name="to_login">to login.</string>
    <string name="username">Username:</string>
    <string name="nickname">Nickname:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="passwords_not_match_error">The passwords does not match, please register again.</string>
    <string name="API_URL">http://10.0.2.2:5119/api/</string>
    <string name="add_contact">Add new contact</string>
    <string name="contact_s_username">Contact\'s username</string>
    <string name="contact_s_nickname">Contact\'s nickname</string>
    <string name="contact_s_server">Contact\'s server</string>
    <string name="close_add_contact">Close add contact</string>
    <string name="logout">Logout</string>
    <string name="go_back">Go Back</string>
    <string name="upload">Upload</string>
    <string name="channel_name">ChatsApp</string>
    <string name="new_meesage_from">New Message From</string>
</resources>