<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fontFamily="sans-serif">

    <LinearLayout
        android:background="@drawable/pages_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_page"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/username_label_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/username_placeholder_register"
            android:inputType="text"
            android:labelFor="@+id/username_label_register"
            android:background="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/username_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/red"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/nickname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/nickname_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_placeholder_register"
            android:inputType="text"
            android:labelFor="@+id/nickname_label"
            android:background="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/nickname_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/password_label_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder_register"
            android:inputType="textPassword"
            android:labelFor="@+id/password_label"
            android:background="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/first_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/edit_text_confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder_register2"
            android:inputType="textPassword"
            android:labelFor="@+id/confirm_password_label"
            android:background="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/second_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/go_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/gray"
                android:backgroundTint="@color/pink"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_login"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>